@@ -1,5 +1,7 @@
 package testing;
 
+import gui.GUI;
+
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.geom.Point2D;
@@ -15,17 +17,22 @@ import java.util.Random;
 
 import javax.swing.Timer;
 
-
+import nodeTypes.RRTWorld;
+import nodeTypes.EpsilonNode.UpdateScheme;
 import rrt.Node;
+import rrt.Search;
+import rrt.Stats;
 import rrt.Tree;
 import rrt.World;
-import rrtImpl.RRTWorld;
-import rrtImpl.VLRRTnode;
-import rrtImpl.VLRRTnode.changeEpsilonScheme;
-import search.RRTResearch;
+import rrt.Search.Algorithm;
+import search.DVLERRTreSearch;
+import search.DVLRRTsearch;
+import search.ERRTsearch;
 import search.RRTsearch;
-import search.RRTResearch.averageStrat;
-import search.RRTsearch.Algorithm;
+import search.RRTstats;
+import search.VLERRTreSearch;
+import search.VLRRTreSearch;
+import search.VLRRTsearch;
 
 public class Testing { 
 	
@@ -33,36 +40,32 @@ public class Testing {
 	
 	private final double PROB_CHANGE_OBSTACLE = 0.05;
 	
-	private RRTsearch searcher;
+	private Search searcher;
 	
 	private World world;
 	private int pGoal;
 	private int baseLength;
 	private int pWayPoint;
-	private List<Node> wayPoints;
-	protected VLRRTnode.changeEpsilonScheme inc; //= VLRRTnode.changeEpsilonScheme.Linear;
+	private List<Node> wayPoints = null;
+	protected UpdateScheme inc; //= VLRRTnode.changeEpsilonScheme.Linear;
 	protected double incFactor;// = .1;
-	protected VLRRTnode.changeEpsilonScheme dec;// = VLRRTnode.changeEpsilonScheme.Linear;
+	protected UpdateScheme dec;// = VLRRTnode.changeEpsilonScheme.Linear;
 	protected double decFactor;// = .1;
 	private boolean optimize;// = false;
 	private int runtime;
 
-	
-	private List<Stats> stats;
+	private List<RRTstats> stats;
 	
 	/* TODO: recording start time and goal find time  */
 	/* TODO: pretty print of information for graphing  */
 	
-	
-	
-	
 	class TestTask extends Thread {
 
-		RRTsearch search;
+		Search search;
 		int delay;
 		Stats stats;
 		
-		public TestTask(RRTsearch search, int delay, Stats stats) { //pre: totally init'd search.
+		public TestTask(Search search, int delay, Stats stats) { //pre: totally init'd search.
 			super();
 			this.search = search;
 			this.delay = delay;
@@ -91,48 +94,46 @@ public class Testing {
 
 	public Testing(int runtime, int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world, boolean optimize)  {
 		this(runtime, p, baseLength, pWayPoint, wayPoints, world, optimize, 
-				VLRRTnode.changeEpsilonScheme.Linear, .1, VLRRTnode.changeEpsilonScheme.Linear, .1);
-
-
+				UpdateScheme.Linear, .1, UpdateScheme.Linear, .1);
 	}
 	
 	public Testing(int runtime, int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world)  {
 		this(runtime, p, baseLength, pWayPoint, wayPoints, world, false, 
-				VLRRTnode.changeEpsilonScheme.Linear, .1, VLRRTnode.changeEpsilonScheme.Linear, .1);
+				UpdateScheme.Linear, .1, UpdateScheme.Linear, .1);
 
 	}
 
 	public Testing( int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world)  {
 		this(50, p, baseLength, pWayPoint, wayPoints, world, false, 
-				VLRRTnode.changeEpsilonScheme.Linear, .1, VLRRTnode.changeEpsilonScheme.Linear, .1);
+				UpdateScheme.Linear, .1, UpdateScheme.Linear, .1);
 	}
 
 	public Testing( int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world, boolean optimize)  {
 		this(50, p, baseLength, pWayPoint, wayPoints, world, optimize, 
-				VLRRTnode.changeEpsilonScheme.Linear, .1, VLRRTnode.changeEpsilonScheme.Linear, .1);
+				UpdateScheme.Linear, .1, UpdateScheme.Linear, .1);
 	}
 	
 	public Testing(int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world,
-	VLRRTnode.changeEpsilonScheme inc, double incFactor,VLRRTnode.changeEpsilonScheme dec, double decFactor) {
+			UpdateScheme inc, double incFactor,UpdateScheme dec, double decFactor) {
 		this(50, p, baseLength, pWayPoint, wayPoints, world, false, 
 				inc, incFactor, dec, decFactor);		
 	}
 	
 	public Testing(int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world, boolean optimize,
-			VLRRTnode.changeEpsilonScheme inc, double incFactor,VLRRTnode.changeEpsilonScheme dec, double decFactor) {
+			UpdateScheme inc, double incFactor,UpdateScheme dec, double decFactor) {
 				this(50, p, baseLength, pWayPoint, wayPoints, world, optimize, 
 						inc, incFactor, dec, decFactor);		
 			}
 	
 	public Testing(int runtime, int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world,
-			VLRRTnode.changeEpsilonScheme inc, double incFactor,VLRRTnode.changeEpsilonScheme dec, double decFactor) {
+			UpdateScheme inc, double incFactor,UpdateScheme dec, double decFactor) {
 				this(runtime, p, baseLength, pWayPoint, wayPoints, world, false, 
 				inc, incFactor, dec, decFactor);
 
 			}
 	
 	public Testing(int runtime, int p, int baseLength, int pWayPoint, List<Node> wayPoints, World world, boolean optimize,
-			VLRRTnode.changeEpsilonScheme inc, double incFactor,VLRRTnode.changeEpsilonScheme dec, double decFactor) {
+			UpdateScheme inc, double incFactor, UpdateScheme dec, double decFactor) {
 				this.inc = inc;
 				this.dec = dec;
 				this.incFactor = incFactor;
@@ -142,16 +143,15 @@ public class Testing {
 				this.pWayPoint = pWayPoint;
 				this.wayPoints = wayPoints;
 
-				this.stats = new LinkedList<Stats>();
+				this.stats = new LinkedList<RRTstats>();
 				this.world = world;
 				this.runtime = runtime;
 				this.optimize = optimize;
 			}
 	
-	private void execSearch(RRTsearch.Algorithm alg, boolean printToScreen, boolean replan, RRTResearch.averageStrat strat, int nClosest) {
-		
-		
-		Stats stat = new Stats();
+	private void execSearch(Search.Algorithm alg, boolean printToScreen, VLRRTreSearch.averageStrat strat, int nClosest) {
+			
+		RRTstats stat = new RRTstats();
 		stat.setwHeight(world.height());
 		stat.setwWidth(world.width());
 		stat.setAlg(alg);
@@ -160,15 +160,13 @@ public class Testing {
 		stat.setpWayPoint(pWayPoint);
 
 		switch (alg) {
-			case ERRT: setupERRT(replan); break;
-			case RRT : setupBasicRRT(replan); break;
-			case VLRRT : setupVLRRT(replan); break;
-			case VLERRT : setupVLERRT(replan,strat,nClosest); break;
-			case DVLRRT : setupDVLRRT(replan); break;
-			case DVLERRT : setupDVLERRT(replan,nClosest); break;
+			case ERRT: setupERRT(); break;
+			case RRT : setupBasicRRT(); break;
+			case VLRRT : setupVLRRT(); break;
+			case VLERRT : setupVLERRT(strat,nClosest); break;
+			case DVLRRT : setupDVLRRT(); break;
+			case DVLERRT : setupDVLERRT(nClosest); break;
 		}
-		
-		
 		
 		TestTask task = new TestTask(searcher,runtime,stat);
 		task.start();
@@ -189,7 +187,7 @@ public class Testing {
 				Node parent_node = goal.getParent();
 				Point2D leaf = goal.getPoint();
 				Point2D parent = parent_node.getPoint();
-				stat.incgDistance(RRTsearch.euclidianDistance(parent, leaf));
+				stat.incgDistance(parent.distance(leaf));
 				goal = parent_node;
 			}
 			
@@ -205,109 +203,79 @@ public class Testing {
 		stats.add(stat); //Store for future processing.
 				
 		//searcher.show();
-		
-		
-		searcher.screenshot("Exec_"+alg.toString()+"_"+System.currentTimeMillis());
-			
+		if (printToScreen)
+			GUI.screenshot(searcher.getWorld(),
+					   searcher.getSearchTree(),
+					   "Exec_"+alg.toString()+"_"+System.currentTimeMillis());	
 		
 	}
 
-	private void setupBasicRRT(boolean replan) {
+	private void setupBasicRRT() {
 		
-		Tree t = null;
-		if (replan) {
-			if (searcher != null)
-				t = searcher.getSearchTree();
-		}
-		this.searcher = RRTResearch.basicRRT(world, pGoal, baseLength, optimize);
-		((RRTResearch)searcher).setPrevSearch(t);
+		this.searcher = new RRTsearch(world, pGoal, baseLength);
 	
 	}
 	
-	private void setupERRT(boolean replan) {
-		Tree t = null;
-		if (replan) {
-			if (searcher != null)
-				t = searcher.getSearchTree();
-		}
-		this.searcher = RRTResearch.ERRT(world, pGoal, baseLength, pWayPoint, wayPoints, optimize);
-		((RRTResearch)searcher).setPrevSearch(t);
+	private void setupERRT() {
+		this.searcher = new ERRTsearch(world, pGoal, baseLength, pWayPoint, wayPoints);	
 	}
 	
-	private void setupVLRRT(boolean replan) {
-		Tree t = null;
-		if (replan) {
-			if (searcher != null)
-				t = searcher.getSearchTree();
-		}
+	private void setupVLRRT() {
 
-		this.searcher = RRTResearch.VLRRT(world, pGoal, baseLength, inc, incFactor, dec, decFactor, optimize);
-		((RRTResearch)searcher).setPrevSearch(t);
-	}
-	
-	private void setupVLERRT(boolean replan, RRTResearch.averageStrat strat, int nClosest) {
-		Tree t = null;
-		if (replan) {
-			if (searcher != null)
-				t = searcher.getSearchTree();
-		}
-		this.searcher = RRTResearch.VLERRT(world, pGoal, baseLength, pWayPoint, wayPoints, inc, incFactor, dec, decFactor, optimize, strat, nClosest);
-		((RRTResearch)searcher).setPrevSearch(t);
-	}
-	
-	private void setupDVLRRT(boolean replan) {
-		Tree t = null;
-		if (replan) {
-			if (searcher != null)
-				t = searcher.getSearchTree();
-		}
-		this.searcher = RRTResearch.VLRRT(world, pGoal, baseLength, inc, incFactor, dec, decFactor, optimize);
-		((RRTResearch)searcher).setPrevSearch(t);
-	}
-	
-	private void setupDVLERRT(boolean replan, int nClosest) {
-		Tree t = null;
-		if (replan) {
-			if (searcher != null)
-				t = searcher.getSearchTree();
-		}
-		this.searcher = RRTResearch.VLERRT(world, pGoal, baseLength, pWayPoint, wayPoints, inc, incFactor, dec, decFactor, optimize, nClosest);
-		((RRTResearch)searcher).setPrevSearch(t);
-	}
+		this.searcher = new VLRRTsearch(world, pGoal, baseLength, inc, incFactor, dec, decFactor);
 
-	
-	private double getRandomShiftX(Random rng,int width) {
-		return rng.nextBoolean()? rng.nextInt((int)(width*0.1)) : -(rng.nextInt((int)(width*0.1)));
 	}
 	
-	private double getRandomShiftY(Random rng, int height) {
-		return rng.nextBoolean()? rng.nextInt((int)(height*0.1)) : -(rng.nextInt((int)(height*0.1)));
+	private void setupVLERRT(VLRRTreSearch.averageStrat strat, int nClosest) {
+
+		Tree t = null;
+		if (searcher != null) t = searcher.getSearchTree();
+		this.searcher =  new VLERRTreSearch(world, pGoal, baseLength, 
+				inc, incFactor, dec, decFactor, 
+				t, nClosest ,strat,
+				pWayPoint, wayPoints);
 	}
 	
-	private void advanceStart() {
-		Node n = searcher.getSearchTree().closestTo(world.goal());
-		Node prev = null;
-		while( !n.isRoot() ){
-			prev = n;
-			n = n.getParent();
-		}
-		if (prev == null) //In this case, we are already at the goal, return the goal?
-			world.setStart(n.getPoint());
-		else
-			world.setStart(prev.getPoint());
+	private void setupDVLRRT() {
+		this.searcher = new DVLRRTsearch(world, pGoal, baseLength, inc, incFactor, dec, decFactor);	
+	}
+	
+	private void setupDVLERRT(int nClosest) {
+		Tree t = null;
 		
+		if (searcher != null)
+			t = searcher.getSearchTree();
+		
+		this.searcher = new DVLERRTreSearch(world, pGoal, baseLength, 
+				inc, incFactor, dec, decFactor,
+				t, nClosest,
+				pWayPoint, wayPoints);
 	}
+	
+//	private void advanceStart() {
+//		Node n = searcher.getSearchTree().closestTo(world.goal());
+//		Node prev = null;
+//		while( !n.isRoot() ){
+//			prev = n;
+//			n = n.getParent();
+//		}
+//		if (prev == null) //In this case, we are already at the goal, return the goal?
+//			world.setStart(n.getPoint());
+//		else
+//			world.setStart(prev.getPoint());
+//		
+//	}
 	
 	private void advanceStart(int n) {
-		LinkedList<Node> l = searcher.collectBestPlan();
+		List<Node> l = searcher.bestPlan();
 		if (l.size() < n)
-			world.setStart(l.getLast().getPoint());
+			world.setStart(l.get(l.size()-1).getPoint());
 		else
 			world.setStart(l.get(n).getPoint());
 	}
 	
 	public List<Node> genWaypoints(int nWaypoints) {
-		LinkedList<Node> l = searcher.collectBestPlan();
+		List<Node> l = searcher.bestPlan();
 		Random rng = new Random(System.nanoTime());
 		List<Node> res = new LinkedList<Node>();
 		for (int i=0;i<nWaypoints;i++) {
@@ -354,18 +322,65 @@ public class Testing {
 		this.world = newWorld;		
 	}
 	
+	private double getRandomShiftX(Random rng,int width) {
+		return rng.nextBoolean()? rng.nextInt((int)(width*0.1)) : -(rng.nextInt((int)(width*0.1)));
+	}
+	
+	private double getRandomShiftY(Random rng, int height) {
+		return rng.nextBoolean()? rng.nextInt((int)(height*0.1)) : -(rng.nextInt((int)(height*0.1)));
+	}
+	
 
 	
+	public List<RRTstats> getStats() {
+		return stats;
+	}
+	
+	public void execNRuns(int n, Search.Algorithm alg, boolean printToScreen) {
+		
+		for (int i=0;i<n;i++) {
+			execSearch(alg,printToScreen,VLRRTreSearch.averageStrat.Weighted, 5);
+			//changeWorld();
+		}
+		if (printToScreen) 
+			GUI.screenshot(searcher.getWorld(),
+					   searcher.getSearchTree(),
+					   "Exec_"+alg.toString()+"_"+System.currentTimeMillis());	
+
+		
+		
+	}
+	
+	public void execNRuns(int n, Search.Algorithm alg) {
+		for (int i=0;i<n;i++) {
+			execSearch(alg,false,VLRRTreSearch.averageStrat.Weighted, 5);
+			//changeWorld();
+		}
+	}
+	
+	public void execNReRuns(int n, Algorithm alg, boolean printToScreen, VLRRTreSearch.averageStrat strat, int nWaypoints, int nClosest) {
+		for (int i=0;i<n;i++) {
+			execSearch(alg,printToScreen, strat, nClosest);
+			//changeWorld(); 
+			advanceStart(2);
+			wayPoints = genWaypoints(nWaypoints);
+
+		}
+	}
+
+	public Search getSearcher(){
+		return this.searcher;
+	}
+	
 	//output to the stats directory
-	public void printStats(String outputFile, boolean includeTime) {
-		String fileName = "runStats/" + outputFile;
-		if (includeTime) fileName = fileName+System.currentTimeMillis();
+	public void printStats(String outputFile) {
+		String fileName = "runStats/" + outputFile + System.currentTimeMillis();
 		
 		File f = new File(fileName);
 		try {
 			FileWriter fwr = new FileWriter(f);
 			
-			Iterator<Stats> itr = stats.iterator();
+			Iterator<RRTstats> itr = stats.iterator();
 			fwr.write("Algorithm \t baseLength \t gDistance \t goalFTime \t" +
 					"goalFound \t initTime \t nIterations \t nNodes \t pGoal \t pWayPoint \t " +
 					"runtimeCap \t treeCoverage \t wHeight \t wWidth \t coverageRatio \t TimeDelta\n");
@@ -384,45 +399,6 @@ public class Testing {
 		
 	}
 	
-	public List<Stats> getStats() {
-		return stats;
-	}
-	
-	public void execNRuns(int n, RRTsearch.Algorithm alg, boolean printToScreen) {
-		
-		for (int i=0;i<n;i++) {
-			execSearch(alg,printToScreen,false,RRTResearch.averageStrat.Weighted, 5);
-			//changeWorld();
-		}
-		if (printToScreen) 
-			searcher.screenshot("Exec_"+alg.toString()+"_"+System.currentTimeMillis());
-
-		
-		
-	}
-	
-	public void execNRuns(int n, RRTsearch.Algorithm alg) {
-		for (int i=0;i<n;i++) {
-			execSearch(alg,false,false,RRTResearch.averageStrat.Weighted, 5);
-			//changeWorld();
-		}
-	}
-	
-	public void execNReRuns(int n, RRTsearch.Algorithm alg, boolean printToScreen, RRTResearch.averageStrat strat, int nWaypoints, int nClosest) {
-		for (int i=0;i<n;i++) {
-			execSearch(alg,printToScreen, true, strat, nClosest);
-			//changeWorld(); 
-			advanceStart(2);
-			wayPoints = genWaypoints(nWaypoints);
-
-		}
-	}
-	
-	
-	public RRTsearch getSearcher(){
-		return this.searcher;
-	}
-	
 	//Testing(int runtimelimit, int p, int baseLength, int pWayPoint, 
 	//	List<Node> wayPoints, double baseEpsilon, String testFile)  
 	//
@@ -433,7 +409,7 @@ public class Testing {
 
 		
 		//test.execNRuns(50,RRTsearch.Algorithm.RRT,true);
-		test.execNReRuns(50,RRTsearch.Algorithm.DVLERRT,true, RRTResearch.averageStrat.Weighted,10, 10);
+		//test.execNReRuns(50,RRTsearchAbs.Algorithm.DVLERRT,true, RRTResearch.averageStrat.Weighted,10, 10);
 		//test.execNRuns(50,RRTsearch.Algorithm.DVLRRT,true);
 		//test.printStats("stats_bb_50_20_10_", true);
 		
